add new schema and edit paths
